# GemCode

./: .gitignore  README.md  Research.md  run-gemcode-tui.sh
gemcode/: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml
gemcode/src/gemcode/: __init__.py  __main__.py  a2a_bridge.py  agent.py  agent_habits.py  agent_intelligence.py  agent_mesh.py  agent_triggers.py  audit.py  autocompact.py  automations.py  autotune.py  callbacks.py  capability_routing.py  checkpoints.py  cli.py  codebase_awareness.py  compaction.py  config.py  context_budget.py  context_warning.py  credentials.py  curated_memory.py  delegation_learning.py  dynamic_policy.py  event_bus.py  fleet_reports.py  habit_chains.py  habit_runs.py  hitl_session.py  hooks.py  ide_protocol.py  ide_stdio.py  intent_classifier.py  interactions.py  invoke.py  kaira_client.py  kaira_daemon.py  kaira_ipc.py  kaira_job_store.py  (+42 more)
gemcode/src/gemcode/computer_use/: browser_computer.py
gemcode/src/gemcode/evals/: harness.py
gemcode/src/gemcode/memory/: embedding_memory_service.py  file_memory_service.py
gemcode/src/gemcode/plugins/: terminal_hooks_plugin.py  tool_recovery_plugin.py
gemcode/src/gemcode/query/: __init__.py  config.py  deps.py  engine.py  stop_hooks.py  token_budget.py  transitions.py
gemcode/src/gemcode/tools/: __init__.py  automations_tools.py  bash.py  browser.py  compress_memory.py  curated_memory.py  edit.py  filesystem.py  notebook.py  notes.py  org_tools.py  repo_map.py  search.py  shell.py  (+10 more)
gemcode/tests/: test_add_dir.py  test_agent_habits.py  test_agent_instruction.py  test_agent_mesh.py  test_autocompact.py  test_automations.py  test_capability_routing.py  test_checkpoint_diff_command.py  test_claude_web_adapter_sse.py  test_cli_init.py  test_compress_memory_tool.py  test_computer_use_permissions.py  test_context_budget.py  test_context_warning.py  test_credentials.py  test_eval_harness_layout.py  test_event_bus.py  test_files_api.py  test_fleet_reports.py  test_habit_chains.py  test_habit_runs.py  test_hitl_bridge_cross_process.py  test_hosted_tenant.py  test_ide_stdio_attachments.py  test_interactive_permission_ask.py  test_kaira_ipc_paths.py  test_kaira_scheduler.py  test_kairos_scheduler.py  test_modality_tools.py  test_model_error_retry.py  test_model_errors.py  test_model_routing.py  test_multimodal_input.py  test_output_styles_and_rules.py  test_paths.py  test_permissions.py  test_preview_proxy.py  test_project_folder_scope.py  test_prompt_suggestions.py  test_repl_commands.py  (+15 more)
(+83 files in other folders)
